--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<nav class="header-nav">
 					<a href="./index.html" class="header-logo link">Web<span class="header-span">Studio</span></a>
 					<ul class="header-list list">
-						<li class="header-item"><a class="header-link-active link" href="./index.html">Studio</a></li>
+						<li class="header-item"><a class="header-link active link" href="./index.html">Studio</a></li>
 						<li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
 						<li class="header-item"><a class="header-link link" href="">Contacts</a></li>
 					</ul>
@@ -53,7 +53,16 @@
 						Effective Solutions <br />
 						for Your Business
 					</h1>
-					<button type="button" class="hero-btn">Order Service</button>
+					<button data-modal-open type="button" class="hero-btn">Order Service</button>
+				</div>
+				<div class="backdrop is-hidden" data-modal>
+					<div class="modal">
+						<button data-modal-close type="button" class="modal-cross-button">
+							<svg class="button-modal" width="8" height="8">
+								<use href="./images/svg/symbol-cross.svg#icon-cross"></use>
+							</svg>
+						</button>
+					</div>
 				</div>
 			</section>
 
@@ -377,5 +386,6 @@
 			</div>
 		</footer>
 		<!-- Footer_Section -->
+		<script src="./modal.js"></script>
 	</body>
 </html>
