--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 					<a href="./index.html" class="header-logo link">Web<span class="header-span">Studio</span></a>
 					<ul class="header-list list">
 						<li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-						<li class="header-item"><a class="header-link-active link" href="./portfolio.html">Portfolio</a></li>
+						<li class="header-item"><a class="header-link active link" href="./portfolio.html">Portfolio</a></li>
 						<li class="header-item"><a class="header-link link" href="">Contacts</a></li>
 					</ul>
 				</nav>
@@ -61,7 +61,9 @@
 					<ul class="portfolio-list list">
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port1.jpg" alt="Banking application interface" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port1.jpg" alt="Banking application interface" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Banking App Interface Concept</h2>
 									<p class="portfolio-text">App</p>
@@ -70,7 +72,9 @@
 						</li>
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port2.jpg" alt="Cashless payment by phone" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port2.jpg" alt="Cashless payment by phone" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Cashless Payment</h2>
 									<p class="portfolio-text">Marketing</p>
@@ -79,7 +83,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port3.jpg" alt="Laptop and phone with app image" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port3.jpg" alt="Laptop and phone with app image" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Meditation App</h2>
 									<p class="portfolio-text">App</p>
@@ -88,7 +94,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port4.jpg" alt="Driver inside the car" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port4.jpg" alt="Driver inside the car" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Taxi Service</h2>
 									<p class="portfolio-text">Marketing</p>
@@ -97,7 +105,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port5.jpg" alt="Screen illustrations" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port5.jpg" alt="Screen illustrations" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Screen Illustrations</h2>
 									<p class="portfolio-text">Design</p>
@@ -106,7 +116,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port6.jpg" alt="Girl in headphones talking on the phone" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port6.jpg" alt="Girl in headphones talking on the phone" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Online Courses</h2>
 									<p class="portfolio-text">Marketing</p>
@@ -115,7 +127,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port7.jpg" alt="Instagram stories" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port7.jpg" alt="Instagram stories" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Instagram Stories Concept</h2>
 									<p class="portfolio-text">Design</p>
@@ -124,7 +138,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port8.jpg" alt="Organic food in a bag" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port8.jpg" alt="Organic food in a bag" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Organic Food</h2>
 									<p class="portfolio-text">Web Site</p>
@@ -133,7 +149,9 @@
 						</li>
 						<li class="portfolio-item"
 							><a href="" class="portfolio-link link">
-								<img src="./images/images-portf/port9.jpg" alt="Fresh coffee" />
+								<div class="port-overlay">
+									<img src="./images/images-portf/port9.jpg" alt="Fresh coffee" />
+								</div>
 								<div class="portfolio-border">
 									<h2 class="portfolio-name">Fresh Coffee</h2>
 									<p class="portfolio-text">Web Site</p>
@@ -148,13 +166,49 @@
 
 		<!-- Footer_Section -->
 		<footer class="footer">
-			<div class="container">
-				<a href="./index.html" class="header-logo link">Web<span class="footer-header-span">Studio</span></a>
-				<p class="footer-text">
-					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-				</p>
+			<div class="container footer-section">
+				<div class="footer-div-first">
+					<a href="./index.html" class="footer-logo link">Web<span class="footer-header-span">Studio</span></a>
+					<p class="footer-text">
+						Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="footer-div-second">
+					<p class="footer-text-social">Social media</p>
+					<ul class="footer-ul-icons list">
+						<li class="footer-li-icons">
+							<a href="" class="footer-a-icons link">
+								<svg class="footer-svg">
+									<use href="./images/svg/symbol-defs.svg#icon-instagram-icon"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-li-icons">
+							<a href="" class="footer-a-icons link">
+								<svg class="footer-svg">
+									<use href="./images/svg/symbol-defs.svg#icon-twitter-icon"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-li-icons">
+							<a href="" class="footer-a-icons link">
+								<svg class="footer-svg">
+									<use href="./images/svg/symbol-defs.svg#icon-facebook-icon"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-li-icons">
+							<a href="" class="footer-a-icons link">
+								<svg class="footer-svg">
+									<use href="./images/svg/symbol-defs.svg#icon-linkedin-icon"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 		<!-- Footer_Section -->
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
